@@ -1,7 +1,7 @@
 #
 # Makefile - the EmuTOS overbloated Makefile
 #
-# Copyright (c) 2001, 02 EmuTOS development team.
+# Copyright (c) 2001, 02, 03 EmuTOS development team.
 #
 # This file is distributed under the GPL, version 2 or at your
 # option any later version.  See doc/license.txt for details.
@@ -433,7 +433,6 @@ else
 
 util/langs.c: $(POFILES) po/LINGUAS bug$(EXE) po/messages.pot
 	./bug$(EXE) make
-	mv langs.c $@
 
 obj/langs.o: include/config.h include/i18nconf.h
 
