@@ -2,7 +2,7 @@
  * bug.c - Basic Unencumbering Gettext, a minimal gettext-like tool
  *         (any better name is welcome)
  *
- * Copyright (c) 2001-2002 Laurent Vogel
+ * Copyright (c) 2001-2003 Laurent Vogel
  *
  * Authors:
  *  LVL   Laurent Vogel
@@ -59,6 +59,7 @@
  
 #define TOOLNAME "bug"
 #define DOCNAME  "doc/nls.txt"
+#define LANGS_C  "util/langs.c"
 
 #define HERE fprintf(stderr, "%s:%d\n", __FUNCTION__, __LINE__);
 
@@ -115,7 +116,7 @@ void * xrealloc(void * b, size_t s)
  * xstrdup
  */
 
-char * xstrdup(char *s)
+char * xstrdup(const char *s)
 {
   int len = strlen(s);
   char *a = xmalloc(len+1);
@@ -1708,57 +1709,28 @@ void xgettext(void)
  * charsets
  */
 
-enum charset_code {
-  unknown,
-  latin1,
-  latin2,
-  atarist
-  /* kamenicky, */
-};
-
-typedef enum charset_code cset_t;
-
-struct charset_info {
-  cset_t code;
+struct charset_alias {
   char *name;
+  char *alias;
 };
 
-const struct charset_info charsets[] = {
-  { latin1, "latin1" },
-  { latin1, "ISO-8859-1" },
-  { latin2, "latin2" },
-  { latin2, "ISO-8859-2" },
-  { atarist, "atarist" },
-  /* { kamenicky, "Kamenicky" }, */
+const struct charset_alias charsets[] = {
+  { "latin1", "ISO-8859-1" },
+  { "latin2", "ISO-8859-2" },
+  { "latin9", "ISO-8859-15" },
 };
 
-cset_t get_charset(const char *name)
+/* resolve any known alias */
+char * get_canon_cset_name(const char *name)
 {
   int i;
   int n = sizeof(charsets)/sizeof(*charsets);
   for(i = 0 ; i < n ; i++) {
-    if(!strcmp(charsets[i].name, name)) {
-      return charsets[i].code;
-    }
-  }
-  warn("unknown charset %s", name);
-  fprintf(stderr, "known charsets are:\n");
-  for(i = 0 ; i < n ; i++) {
-    fprintf(stderr, "  %s\n", charsets[i].name);
-  }
-  return unknown;
-}
-
-char * get_charset_name(cset_t code)
-{
-  int i;
-  int n = sizeof(charsets)/sizeof(*charsets);
-  for(i = 0 ; i < n ; i++) {
-    if(charsets[i].code == code) {
+    if(!strcmp(charsets[i].alias, name)) {
       return charsets[i].name;
     }
   }
-  return "unknown";
+  return xstrdup(name);
 }
 
 /*
@@ -1827,37 +1799,33 @@ typedef void(*converter_t)(char *);
 
 
 struct converter_info {
-  cset_t from;
-  cset_t to;
+  char * from;
+  char * to;
   converter_t func;
 };
 
 const struct converter_info converters[] = {
-  { latin1, atarist, latin1_to_atarist },
+  { "latin1", "atarist", latin1_to_atarist },
 };
 
-converter_t get_converter(cset_t from, cset_t to)
+converter_t get_converter(const char * from, const char * to)
 {
   int i;
   int n = sizeof(converters)/sizeof(*converters);
   
-  if(from == to) {
+  if(!strcmp(from, to)) {
     return converter_noop;
   }
   
   for(i = 0 ; i < n ; i++) {
-    if(from == converters[i].from && to == converters[i].to) {
+    if(!strcmp(from, converters[i].from) && !strcmp(to,converters[i].to)) {
       return converters[i].func;
     }
   }
-  warn("unknown charset conversion %s..%s.", 
-    get_charset_name(from), 
-    get_charset_name(to));
+  warn("unknown charset conversion %s..%s.", from, to);
   fprintf(stderr, "known conversions are:\n");
   for(i = 0 ; i < n ; i++) {
-    fprintf(stderr, "  %s..%s\n", 
-      get_charset_name(converters[i].from), 
-      get_charset_name(converters[i].to));
+    fprintf(stderr, "  %s..%s\n", converters[i].from, converters[i].to);
   }
   return converter_noop;
 }
@@ -1903,7 +1871,7 @@ int compute_th_value(char *t)
  * 0 if s is badly formatted. 
  * needs a 3-byte buffer in lang
  */
-int parse_linguas_item(const char *s, char *lang, cset_t *charset)
+int parse_linguas_item(const char *s, char *lang, char **charset)
 {
   if(*s <'a' || *s >= 'z') return 0;
   *lang++ = *s++;
@@ -1912,12 +1880,8 @@ int parse_linguas_item(const char *s, char *lang, cset_t *charset)
   *lang = 0;
   if(*s != ' ' && *s != '\t') return 0;
   while(*s == ' ' || *s == '\t') s++;
-  *charset = get_charset(s);
-  if(*charset != unknown) {
-    return 1;
-  } else {
-    return 0;
-  }
+  *charset = get_canon_cset_name(s);
+  return 1;
 }
   
 void make(void)
@@ -1932,7 +1896,7 @@ void make(void)
   char *t;
   char lang[3];
   da *langs;
-  cset_t from_charset, to_charset;
+  char *from_charset, *to_charset;
   converter_t converter;
   int numref = 0;   /* number of entries in the reference */
   int numtransl;    /* number of translated entries */
@@ -1945,14 +1909,14 @@ void make(void)
   oref = o_new();
   parse_po_file("po/messages.pot", oref);
   
-  f = fopen("langs.c", "w");
+  f = fopen(LANGS_C, "w");
   if(f == NULL) {
-    fatal("cannot open langs.c");
+    fatal("cannot open " LANGS_C);
   }
   
   fprintf(f, "\
 /*\n\
- * langs.c - tables for all languages\n\
+ * " LANGS_C " - tables for all languages\n\
  *\n\
  * This file was generated by " TOOLNAME " version " VERSION " on %s\n\
  * Do not change this file!\n\
@@ -1997,7 +1961,7 @@ void make(void)
     
     /* obtain destination charset from LINGUAS */
     t = da_nth(d, i);
-    if(! parse_linguas_item(t, lang, &to_charset)) {
+    if(!parse_linguas_item(t, lang, &to_charset)) {
       warn("po/LINGUAS: bad lang/charset specification \"%s\"", t);
       continue;
     }
@@ -2014,11 +1978,7 @@ void make(void)
         warn("%s: bad administrative entry", tmp);
         continue;
       }
-      from_charset = get_charset(a.charset);
-      if(from_charset == unknown) {
-        warn("%s: bad charset specification", tmp);
-        continue;
-      }
+      from_charset = get_canon_cset_name(a.charset);
     }
     da_add(langs, xstrdup(lang));
     
@@ -2111,7 +2071,7 @@ void translate(char *lang, char * from)
   pcati p;
   char *to;
   char po[10];
-  cset_t from_charset, to_charset;
+  char *from_charset, *to_charset;
    
   { /* build destination filename */
     int len = strlen(from);
@@ -2131,7 +2091,7 @@ void translate(char *lang, char * from)
   free(to);
   p.f = g;
   
-  to_charset = unknown;
+  to_charset = NULL;
   { /* obtain destination charset from LINGUAS */
     da *d = da_new();
     int i, n;
@@ -2146,12 +2106,11 @@ void translate(char *lang, char * from)
       } else if(!strcmp(lang, l)) {
         break;
       }
-      to_charset = unknown;
     }
   } 
-  if(to_charset == unknown) {
+  if(to_charset == NULL) {
     warn("cannot find destination charset.");
-    return;
+    to_charset = "unknown";
   }     
 
   /* read all translations */
@@ -2166,11 +2125,7 @@ void translate(char *lang, char * from)
       warn("%s: bad administrative entry", po);
       goto fail;
     }
-    from_charset = get_charset(a.charset);
-    if(from_charset == unknown) {
-      warn("%s: bad charset specification", po);
-      goto fail;
-    }
+    from_charset = get_canon_cset_name(a.charset);
   }
 
   p.conv = get_converter(from_charset, to_charset);
